k8s/apps/talana-backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: talana-backend
  labels:
    app: talana-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: talana-backend
  template:
    metadata:
      labels:
        app: talana-backend
    spec:
      containers:
        - name: talana-backend
          image: gcr.io/talana-sre-challenge-jesben/talana-backend:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
      restartPolicy: Always
