k8s/apps/talana-backend/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: talana-backend
  labels:
    app: talana-backend
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: talana-backend
  template:
    metadata:
      labels:
        app: talana-backend
    spec:
      containers:
        - name: talana-backend
          image: us-east1-docker.pkg.dev/talana-sre-challenge-jesben/talana-repo/talana-backend:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
      restartPolicy: Always

  strategy:
    canary:
      canaryService: talana-backend-canary
      stableService: talana-backend-stable
      trafficRouting:
        plugins:
          argoproj-labs/kong:
            ingress: talana-backend
      steps:
        - setWeight: 10
        - pause: {duration: 1m}
        - setWeight: 50
        - pause: {duration: 1m}
        - setWeight: 100
