k8s/apps/talana-backend/base/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: talana-backend-canary
  labels:
    app: talana-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: talana-backend
    # Argo Rollouts automaticamente agrega el selector para apuntar solo a pods canary
