k8s/apps/talana-backend/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: talana-backend-stable
  labels:
    app: talana-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: talana-backend
---
apiVersion: v1
kind: Service
metadata:
  name: talana-backend-canary
  labels:
    app: talana-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: talana-backend
---
apiVersion: v1
kind: Service
metadata:
  name: talana-backend
  labels:
    app: talana-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: talana-backend
