k8s/apps/talana-backend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: talana-backend
  annotations:
    konghq.com/strip-path: "false"
    konghq.com/plugins: rate-limit-backend
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: talana-backend-stable
                port:
                  number: 80
          - path: /health
            pathType: Exact
            backend:
              service:
                name: talana-backend-stable
                port:
                  number: 80
          - path: /ready
            pathType: Exact
            backend:
              service:
                name: talana-backend-stable
                port:
                  number: 80
          - path: /
            pathType: Exact
            backend:
              service:
                name: talana-backend-stable
                port:
                  number: 80
